# Doc-Doctor

./: .gitignore  Git实验快速操作指南.md  Git实验报告.md  package-lock.json  package.json  接口文档.md  软件工程小项目功能想法.md
DevelopLog/: 开发日志(zsh部分).md
DevelopLog/需求文档副本/: 1.drawio  接口文档.md  需求文档.md
FeasibilityAnalysis/: 可行性分析.md
FeasibilityAnalysis/extension_test/: package.json
FeasibilityAnalysis/extension_test/src/: extension.ts
FeasibilityAnalysis/extension_test/src/utils/: getAddress.ts  getDiff.ts
FeasibilityAnalysis/rag_test/: README.md  package-lock.json  package.json  test.ts  tsconfig.json  使用指南.md  思路.md
FeasibilityAnalysis/rag_test/archive/: indexer.ts  query.ts  simple-demo.ts
FeasibilityAnalysis/rag_test/utils/: offline-rag.ts  online-rag.ts
FeasibilityAnalysis/tree_sitter_test/: main.js  main.ts  package-lock.json  package.json  run.bat  tsconfig.json  使用指南.md
FeasibilityAnalysis/ts_run_test/: README.md  function.ts  main.ts  package-lock.json  package.json  tsconfig.json
RequirementDocument/: 设计文档.md  需求文档.md
TestFilesZSH/: .gitignore  README.md  math_utils.c  sensor_processing.c  string_utils.c  syntax_error.c
TestFilesZSH/src/: main_program.c
TestFilesZSH/test/: package-lock.json  package.json
TestFilesZSH/test/src/: extension.ts
TestFilesZSH/test/src/utiles/: analyseFile.ts  checkFunction.ts  jumpToPosition.ts  readDirectory.ts
doc-doctor/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  前后端开发说明.md
doc-doctor/media/: sidebar.js
doc-doctor/native/: CMakeLists.txt  CMakePresets.json  README.md  后端数据库启动说明.md
doc-doctor/native/src/: database.cpp  database.h  main.cpp
doc-doctor/src/: extension.ts  git.d.ts  koffi.d.ts
doc-doctor/src/modules/: database.ts  fileCheck.ts  fileWhiteList.ts  functionCheck.ts  jumpToLocation.ts  projectCheck.ts
doc-doctor/src/utils/: getAddress.ts  getDiff.ts
doc-doctor/test/: testDatabase.cpp
